ingress-traefik/vpn-whitelist.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: vpn-whitelist
spec:
  ipWhiteList:
    sourceRange:
      - 10.7.7.0/24
